primeros pasos con media querys

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     </script>    
 </head>
 <body>
-    <div class="background-section image-container" id="fixed">
-        <img src="/assets/images/landscape_morning.png" alt="Imagen de paisaje por la mañana" style="opacity: 1;">
-        <img src="/assets/images/landscape_morning.png" alt="Imagen de paisaje por la tarde" style="opacity: 0;">
-        <img src="/assets/images/landscape_morning.png" alt="Imagen de paisaje por la tarde" style="opacity: 0;">
-        <img src="/assets/images/landscape_morning.png" alt="Imagen de paisaje por la noche" style="opacity: 0;">
+    <div class="background-section image-container morning" id="fixed">
+        <img src="/assets/images/landscape_morning.svg" alt="Imagen de paisaje por la mañana" style="opacity: 1;">
+        <img src="/assets/images/landscape_afternoon.svg" alt="Imagen de paisaje por la tarde" style="opacity: 0;">
+        <img src="/assets/images/landscape_night.svg" alt="Imagen de paisaje por la noche" style="opacity: 0;">
         <div class="list-container">
             <ul>
                 <li id="scrollPosition"><h2>24 / AGOSTO / 24</h2></li>
