--- a/index.html
+++ b/index.html
@@ -37,33 +37,113 @@
                 alt="Imagen de paisaje por la tarde" style="opacity: 0;">
             <img id="landscape_night" src="/assets/images/mobile_landscape_night.png"
                 alt="Imagen de paisaje por la noche" style="opacity: 0;">
-            <div class="list-container">
-                <ul>
+            <div id="scrollContainer" class="list-container">
+                <ul id="info_morning" style="opacity: 1;">
                     <li>
-                        <h3 class="subtitle shadow bold">24 / AGOSTO / 24</h3>
+                        <h3 class="subtitle bold">24 / AGOSTO / 24</h3>
                     </li>
                     <li><span class="separator-line"></span></li>
                     <li>
-                        <h1 class="shadow" id="title-header">DAN & CAR</h1>
+                        <h1 id="title-header">DAN & CAR</h1>
                     </li>
                     <li><span class="separator-line"></span></li>
                     <li>
-                        <h3 id="invite-text">Tras años de aventuras juntos ha <br> llegado el momento de celebrar con <br> quienes más
-                            queremos.<br>¡Os esperamos a todos!</h3>
+                        <h3 id="invite-text">Tras años de aventuras juntos ha <br> llegado el momento de celebrar con
+                            <br> quienes más
+                            queremos.<br>¡Os esperamos a todos!
+                        </h3>
                     </li>
                     <li><span class="separator-line"></span></li>
                     <li>
                         <h3 class="subtitle bold">TORAZO / ASTURIAS</h3>
                     </li>
                     <li></li>
-                    
+
+                </ul>
+                <ul id="info_afternoon" style="opacity: 0;">
+                    <li>
+                        <div class="info-content">
+                            <img class="info-icons" src="/assets/icons/directions_bus.png" alt="Icono de un autobús">
+                            <h3 class="info-text bold">12:00</h3>
+                            <h3 class="info-text">Bus desde Villaviciosa</h3>
+                            <span class="separator-dot"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="info-content">
+                            <img class="info-icons" src="/assets/icons/photo_camera.png"
+                                alt="Icono de una cámara de fotos">
+                            <h3 class="info-text bold">13:00</h3>
+                            <h3 class="info-text">Ceremonia</h3>
+                            <span class="separator-dot"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="info-content">
+                            <img class="info-icons" src="/assets/icons/tapas.png" alt="Icono de un cuchillo y tenedor">
+                            <h3 class="info-text bold">13:30</h3>
+                            <h3 class="info-text">Cóctel</h3>
+                            <span class="separator-dot"></span>
+                        </div>
+                    </li>
+
+                </ul>
+                <ul id="info_evening" style="opacity: 0;">
+                    <li>
+                        <div class="info-content">
+                            <img class="info-icons" src="/assets/icons/restaurant.png" alt="Icono de un restaurante">
+                            <h3 class="info-text bold">15:00</h3>
+                            <h3 class="info-text">Banquete</h3>
+                            <span class="separator-dot"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="info-content">
+                            <img class="info-icons" src="/assets/icons/celebration.png" alt="Icono de una celebración">
+                            <h3 class="info-text bold">17:00</h3>
+                            <h3 class="info-text">Baile</h3>
+                            <span class="separator-dot"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="info-content">
+                            <img class="info-icons" src="/assets/icons/directions_bus.png" alt="Icono de un autobús">
+                            <h3 class="info-text bold">23:59</h3>
+                            <h3 class="info-text">Bus desde Torazo</h3>
+                            <span class="separator-dot"></span>
+                        </div>
+                    </li>
+                </ul>
+                <ul id="info_night" style="opacity: 0;">
+                    <li>
+                        <div class="info-content">
+                            <img class="info-icons" src="/assets/icons/no_photography.png" alt="Icono de un autobús">
+                            <h3 class="bold">FINCA SORRIBAS</h3>
+                            <span class="separator-dot after-dot"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <h3 id="after-text">Y para quienes la noche aún sea <br> jóven, la celebración continúa hasta
+                            <br> que el cuerpo aguante en la Finca <br> Sorribas, un lugar mágico en <br> Villaviciosa. A un
+                            kilómetro <br> caminando desde la parada del <br> bus. La Fiesta corre de nuestra <br>
+                            cuenta y nuestra cuenta es: </h3>
+                    </li>
+                    <li>
+                        <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
+                    </li>
+                    <li>
+                        <h3>¡Os esperamos a todos!</h3>
+                    </li>
+
                 </ul>
                 <!-- <div id="typeform-container"></div>
                 <div data-tf-live="01HW0Z5XWYASAQ39MZ816T1AHK"></div> -->
             </div>
-            <id class="flex-container">
-                <img id="float-button" src="/assets/icons/scroll-button.png" alt="Icono del botón">
-            </id>
+            <div id="flex-container" class="flex-container">
+                <button id="float-button" style="background: none; border: none; padding: 0; outline: none;">
+                    <img src="/assets/icons/scroll-button.png" alt="Icono del botón">
+                </button>
+            </div>
         </div>
         <!-- <script src="//embed.typeform.com/next/embed.js"></script> -->
 
