mobile con fondo del cielo

--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
 
     <body>
         <div class="background-section image-container morning" id="fixed">
-            <img id="landscape_morning" src="/assets/images/mobile_landscape_morning.png"
+             <!-- imágenes de cielo -->
+            <img id="sky_morning" src="assets/images/mobile_sky_morning.png" alt="Nubes y pájaros de fondo">
+            <!-- imágenes de background -->
+            <img id="landscape_morning" class="bgimage" src="/assets/images/mobile_landscape_morning.png"
                 alt="Imagen de paisaje por la mañana" style="opacity: 1;">
-            <img id="landscape_afternoon" src="/assets/images/mobile_landscape_afternoon.png"
+            <img id="landscape_afternoon" class="bgimage" src="/assets/images/mobile_landscape_afternoon.png"
                 alt="Imagen de paisaje al mediodía" style="opacity: 0;">
-            <img id="landscape_evening" src="/assets/images/mobile_landscape_evening.png"
+            <img id="landscape_evening" class="bgimage" src="/assets/images/mobile_landscape_evening.png"
                 alt="Imagen de paisaje por la tarde" style="opacity: 0;">
-            <img id="landscape_night" src="/assets/images/mobile_landscape_night.png"
+            <img id="landscape_night" class="bgimage" src="/assets/images/mobile_landscape_night.png"
                 alt="Imagen de paisaje por la noche" style="opacity: 0;">
             <div id="scrollContainer" class="list-container">
                 <ul id="info_morning" style="opacity: 1;">
