--- a/index.html
+++ b/index.html
@@ -18,138 +18,166 @@
                 link.href = '/assets/css/styles.css?v=' + new Date().getTime();
                 document.getElementsByTagName('head')[0].appendChild(link);
 
-                // Inicializar al cargar la página
-                updateImageSources();
+                // // Inicializar al cargar la página
+                // updateImageSources();
 
-                // Actualizar al cambiar el tamaño de la ventana
-                window.onresize = updateImageSources;
+                // // Actualizar al cambiar el tamaño de la ventana
+                // window.onresize = updateImageSources;
             }
         </script>
     </head>
 
     <body>
-        <div class="background-section image-container morning" id="fixed">
-             <!-- imágenes de cielo -->
-            <img id="sky_morning" src="assets/images/mobile_sky_morning.png" alt="Nubes y pájaros de fondo">
+        <div class="background-section morning" id="fixed">
+            <!-- imágenes de cielo -->
+            <img id="sky_morning" src="assets/images/mobile_sky_morning.png" alt="Nubes y pájaros de fondo"
+                style="opacity: 0;">
+            <!-- botón de desplazamiento -->
+            <div id="flex-container" class="flex-container">
+                <!-- <button id="float-button" style="background: none; border: none; padding: 0; outline: none;">
+                    <img src="/assets/icons/scroll-button.png" alt="Icono del botón">
+                </button> -->
+            </div>
             <!-- imágenes de background -->
-            <img id="landscape_morning" class="bgimage" src="/assets/images/mobile_landscape_morning.png"
-                alt="Imagen de paisaje por la mañana" style="opacity: 1;">
-            <img id="landscape_afternoon" class="bgimage" src="/assets/images/mobile_landscape_afternoon.png"
+            <div class="image-container">
+                <img id="landscape_morning" src="/assets/images/mobile_landscape_morning.png"
+                    alt="Imagen de paisaje por la mañana">
+            </div>
+            <!-- <img id="landscape_afternoon" class="bgimage" src="/assets/images/mobile_landscape_afternoon.png"
                 alt="Imagen de paisaje al mediodía" style="opacity: 0;">
             <img id="landscape_evening" class="bgimage" src="/assets/images/mobile_landscape_evening.png"
                 alt="Imagen de paisaje por la tarde" style="opacity: 0;">
             <img id="landscape_night" class="bgimage" src="/assets/images/mobile_landscape_night.png"
-                alt="Imagen de paisaje por la noche" style="opacity: 0;">
+                alt="Imagen de paisaje por la noche" style="opacity: 0;"> -->
             <div id="scrollContainer" class="list-container">
-                <ul id="info_morning" style="opacity: 1;">
-                    <li>
-                        <h3 class="subtitle bold">24 / AGOSTO / 24</h3>
-                    </li>
-                    <li><span class="separator-line"></span></li>
-                    <li>
-                        <h1 id="title-header">DAN & CAR</h1>
-                    </li>
-                    <li><span class="separator-line"></span></li>
-                    <li>
-                        <h3 id="invite-text">Tras años de aventuras juntos ha <br> llegado el momento de celebrar con
-                            <br> quienes más
-                            queremos.<br>¡Os esperamos a todos!
-                        </h3>
-                    </li>
-                    <li><span class="separator-line"></span></li>
-                    <li>
-                        <h3 class="subtitle bold">TORAZO / ASTURIAS</h3>
-                    </li>
-                    <li></li>
+                <div class="list-container">
+                    <ul id="first_ul" class="ul_container">
+                        <li class="location_time">
+                            <h3 class="subtitle bold">24 / AGOSTO / 24</h3>
+                        </li>
+                        <li class="container_separator_horizontal">
+                            <span class="separator-line"></span>
+                        </li>
+                        <li>
+                            <h1 id="title-header">DAN & CAR</h1>
+                        </li>
+                        <li class="container_separator_horizontal">
+                            <span class="separator-line"></span>
+                        </li>
+                        <li>
+                            <h3 id="invite-text">Tras años de aventuras juntos ha <br> llegado el momento de celebrar
+                                con
+                                <br> quienes más
+                                queremos.
+                            </h3>
+                        </li>
+                        <li class="container_separator_horizontal">
+                            <span class="separator-line"></span>
+                        </li>
+                        <li class="location_time">
+                            <h3 class="subtitle bold">TORAZO / ASTURIAS</h3>
+                        </li>
+                    </ul>
+                    <ul class="ul_container">
+                        <li>
+                            <div class="info-content">
+                                <img class="info-icons" src="/assets/icons/directions_bus.png"
+                                    alt="Icono de un autobús">
+                                <h3 class="info-text bold">12:00</h3>
+                                <h3 class="info-text">Bus desde Villaviciosa</h3>
+                            </div>
+                            <!-- <span class="init_separator_vertical"></span> -->
+                        </li>
+                        <li class="container_separator_vertical">
+                            <span class="separator_vertical"></span>
+                        </li>
+                        <li>
+                            <div class="info-content">
+                                <img class="info-icons" src="/assets/icons/photo_camera.png"
+                                    alt="Icono de una cámara de fotos">
+                                <h3 class="info-text bold">13:00</h3>
+                                <h3 class="info-text">Ceremonia</h3>
+                            </div>
+                        </li>
+                        <li class="container_separator_vertical">
+                            <span class="separator_vertical"></span>
+                        </li>
+                        <li>
+                            <div class="info-content">
+                                <img class="info-icons" src="/assets/icons/tapas.png"
+                                    alt="Icono de un cuchillo y tenedor">
+                                <h3 class="info-text bold">13:30</h3>
+                                <h3 class="info-text">Cóctel</h3>
+                            </div>
+                        </li>
+                        <li class="container_separator_vertical">
+                            <span class="separator_vertical"></span>
+                        </li>
+                    </ul>
+                    <ul class="ul_container">
+                        <li>
+                            <div class="info-content">
+                                <img class="info-icons" src="/assets/icons/restaurant.png"
+                                    alt="Icono de un restaurante">
+                                <h3 class="info-text bold">15:00</h3>
+                                <h3 class="info-text">Banquete</h3>
+                            </div>
+                        </li>
+                        <li class="container_separator_vertical">
+                            <span class="separator_vertical"></span>
+                        </li>
+                        <li>
+                            <div class="info-content">
+                                <img class="info-icons" src="/assets/icons/celebration.png"
+                                    alt="Icono de una celebración">
+                                <h3 class="info-text bold">17:00</h3>
+                                <h3 class="info-text">Baile</h3>
+                            </div>
+                        </li>
+                        <li class="container_separator_vertical">
+                            <span class="separator_vertical"></span>
+                        </li>
+                        <li>
+                            <div class="info-content">
+                                <img class="info-icons" src="/assets/icons/directions_bus.png"
+                                    alt="Icono de un autobús">
+                                <h3 class="info-text bold">23:59</h3>
+                                <h3 class="info-text">Bus desde Torazo</h3>
+                            </div>
+                        </li>
+                        <li class="container_separator_vertical">
+                            <span class="separator_vertical"></span>
+                        </li>
+                    </ul>
+                    <ul class="ul_container" style="height: 85vh;">
+                        <li>
+                            <div class="info-content" style="height: 56px">
+                                <img class="info-icons" src="/assets/icons/no_photography.png"
+                                    alt="Icono de un autobús">
+                                <h3 class="info-text bold">01:00</h3>
+                                <span class="separator_vertical after-dot"></span>
+                            </div>
+                        </li>
+                        <li>
+                            <h3 id="after-text">Y para quienes la noche aún sea <br> jóven, la celebración continúa
+                                en la
+                                <br> Finca Sorribas, un lugar mágico en <br>
+                                Villaviciosa. A un
+                                kilómetro <br> caminando desde la parada del <br> bus. La Fiesta corre de nuestra <br>
+                                cuenta y, para todo lo demás,<br> nuestra cuenta es:
+                            </h3>
+                        </li>
+                        <li>
+                            <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
+                        </li>
+                        <li>
+                            <h3>¡Os esperamos a todos!</h3>
+                        </li>
 
-                </ul>
-                <ul id="info_afternoon" style="opacity: 0;">
-                    <li>
-                        <div class="info-content">
-                            <img class="info-icons" src="/assets/icons/directions_bus.png" alt="Icono de un autobús">
-                            <h3 class="info-text bold">12:00</h3>
-                            <h3 class="info-text">Bus desde Villaviciosa</h3>
-                            <span class="separator-dot"></span>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="info-content">
-                            <img class="info-icons" src="/assets/icons/photo_camera.png"
-                                alt="Icono de una cámara de fotos">
-                            <h3 class="info-text bold">13:00</h3>
-                            <h3 class="info-text">Ceremonia</h3>
-                            <span class="separator-dot"></span>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="info-content">
-                            <img class="info-icons" src="/assets/icons/tapas.png" alt="Icono de un cuchillo y tenedor">
-                            <h3 class="info-text bold">13:30</h3>
-                            <h3 class="info-text">Cóctel</h3>
-                            <span class="separator-dot"></span>
-                        </div>
-                    </li>
-
-                </ul>
-                <ul id="info_evening" style="opacity: 0;">
-                    <li>
-                        <div class="info-content">
-                            <img class="info-icons" src="/assets/icons/restaurant.png" alt="Icono de un restaurante">
-                            <h3 class="info-text bold">15:00</h3>
-                            <h3 class="info-text">Banquete</h3>
-                            <span class="separator-dot"></span>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="info-content">
-                            <img class="info-icons" src="/assets/icons/celebration.png" alt="Icono de una celebración">
-                            <h3 class="info-text bold">17:00</h3>
-                            <h3 class="info-text">Baile</h3>
-                            <span class="separator-dot"></span>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="info-content">
-                            <img class="info-icons" src="/assets/icons/directions_bus.png" alt="Icono de un autobús">
-                            <h3 class="info-text bold">23:59</h3>
-                            <h3 class="info-text">Bus desde Torazo</h3>
-                            <span class="separator-dot"></span>
-                        </div>
-                    </li>
-                </ul>
-                <ul id="info_night" style="opacity: 0;">
-                    <li>
-                        <div class="info-content">
-                            <img class="info-icons" src="/assets/icons/no_photography.png" alt="Icono de un autobús">
-                            <h3 class="bold">FINCA SORRIBAS</h3>
-                            <span class="separator-dot after-dot"></span>
-                        </div>
-                    </li>
-                    <li>
-                        <h3 id="after-text">Y para quienes la noche aún sea <br> jóven, la celebración continúa hasta
-                            <br> que el cuerpo aguante en la Finca <br> Sorribas, un lugar mágico en <br> Villaviciosa. A un
-                            kilómetro <br> caminando desde la parada del <br> bus. La Fiesta corre de nuestra <br>
-                            cuenta y nuestra cuenta es: </h3>
-                    </li>
-                    <li>
-                        <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
-                    </li>
-                    <li>
-                        <h3>¡Os esperamos a todos!</h3>
-                    </li>
-
-                </ul>
-                <!-- <div id="typeform-container"></div>
-                <div data-tf-live="01HW0Z5XWYASAQ39MZ816T1AHK"></div> -->
-            </div>
-            <div id="flex-container" class="flex-container">
-                <button id="float-button" style="background: none; border: none; padding: 0; outline: none;">
-                    <img src="/assets/icons/scroll-button.png" alt="Icono del botón">
-                </button>
+                    </ul>
+                </div>
             </div>
         </div>
-        <!-- <script src="//embed.typeform.com/next/embed.js"></script> -->
-
     </body>
 
 </html>
