botones añadidos, falta mejorar

--- a/index.html
+++ b/index.html
@@ -40,19 +40,18 @@
         <div class="background-section morning" id="fixed">
             <!-- imágenes de cielo -->
             <div class="sky-container">
-                <img id="sky_image" src="assets/images/mobile_sky_morning.png" alt="Nubes y pájaros de fondo"
-                    style="opacity: 1;">
+                <img id="sky_image" src="assets/images/mobile_sky_morning.png" alt="Nubes y pájaros de fondo">
             </div>
             <!-- botón de desplazamiento -->
             <div class="flex-container">
                 <button id="float-button">
-                    <img src="/assets/icons/scroll-button.png" alt="Icono del botón">
+                    <img id="button-image" src="/assets/buttons/down-scroll-button-rest.png" alt="Icono del botón">
                 </button>
             </div>
             <!-- imágenes de background -->
             <div class="image-container">
                 <img id="landscape_image" class="bgimage" src="/assets/images/mobile_landscape_morning.png"
-                    alt="Imagen de paisaje por la mañana" style="opacity: 1;">
+                    alt="Imagen de paisaje por la mañana">
             </div>
             <div id="scrollContainer">
                 <div id="list-container">
@@ -119,7 +118,7 @@
                             <span class="separator_vertical"></span>
                         </li>
                     </ul>
-                    <ul class="ul_container">
+                    <ul id="third_ul" class="ul_container">
                         <li>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/restaurant.png"
@@ -154,7 +153,7 @@
                             <span class="separator_vertical"></span>
                         </li>
                     </ul>
-                    <ul class="ul_container" style="height: 85vh;">
+                    <ul id="fourth_ul" class="ul_container">
                         <li>
                             <div class="info-content" style="height: 56px">
                                 <img class="info-icons" src="/assets/icons/no_photography.png"
@@ -178,7 +177,6 @@
                         <li>
                             <h3>¡Os esperamos a todos!</h3>
                         </li>
-
                     </ul>
                 </div>
             </div>
