botones svg landscape pantalla blanca y algunos retoques dvh

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- botón de desplazamiento -->
             <div class="flex-container">
                 <button id="float-button">
-                    <img id="button-image" src="/assets/buttons/down-scroll-button-rest.png" alt="Icono del botón">
+                    <img id="button-image" src="/assets/buttons/down-scroll-button-rest.svg" alt="Icono del botón">
                 </button>
             </div>
             <!-- imágenes de background -->
@@ -149,8 +149,8 @@
                                 <h3 class="info-text">Bus desde Torazo</h3>
                             </div>
                         </li>
-                        <li class="container_separator_vertical">
-                            <span class="separator_vertical"></span>
+                        <li class="container_separator_vertical last">
+                            <span class="separator_vertical last"></span>
                         </li>
                     </ul>
                     <ul id="fourth_ul" class="ul_container">
@@ -163,12 +163,10 @@
                             </div>
                         </li>
                         <li>
-                            <h3 id="after-text">Y para quienes la noche aún sea <br> jóven, la celebración continúa
-                                en la
-                                <br> Finca Sorribas, un lugar mágico en <br>
-                                Villaviciosa. A un
-                                kilómetro <br> caminando desde la parada del <br> bus. La Fiesta corre de nuestra <br>
-                                cuenta y, para todo lo demás,<br> nuestra cuenta es:
+                            <h3 id="after-text">Y para quienes la noche aún sea jóven, la <br> celebración continúa
+                                en la Finca Sorribas, un <br> lugar mágico en Villaviciosa. A un kilómetro 
+                                <br> caminando desde la parada del bus. La fiesta <br> 
+                                corre de nuestra cuenta y, para todo lo <br>demás, nuestra cuenta es:
                             </h3>
                         </li>
                         <li>
