nuevo heigth y width para calculos

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
                 link2.href = '/assets/css/responsive.css?v=' + new Date().getTime();
                 document.getElementsByTagName('head')[0].appendChild(link2);
 
-                // // Inicializar al cargar la página
-                // updateImageSources();
-
-                // // Actualizar al cambiar el tamaño de la ventana
-                // window.onresize = updateImageSources;
+                $('h3#iban').css('user-select', 'none');
             }
         </script>
     </head>
