pantalla tamaño mostrar

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     <body>
         <div class="background-section morning" id="fixed">
+            <div class="deviceVH">
+                <p id="height"></p>
+                <p id="width"></p>
+            </div>
             <!-- imágenes de cielo -->
             <div class="sky-container">
                 <img id="sky_image" src="assets/images/mobile_sky_morning.png" alt="Nubes y pájaros de fondo">
