--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400..700;1,400..700&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap"
             rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
         <script src="/assets/js/script.js"></script>
         <script>
             window.onload = function () {
@@ -162,8 +165,8 @@
                         </li>
                         <li>
                             <h3 id="after-text">Y para quienes la noche aún sea jóven, la <br> celebración continúa
-                                en la Finca Sorribas, un <br> lugar mágico en Villaviciosa. A un kilómetro 
-                                <br> caminando desde la parada del bus. La fiesta <br> 
+                                en la Finca Sorribas, un <br> lugar mágico en Villaviciosa. A un kilómetro
+                                <br> caminando desde la parada del bus. La fiesta <br>
                                 corre de nuestra cuenta y, para todo lo <br>demás, nuestra cuenta es:
                             </h3>
                         </li>
