--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                         <li class="location_time">
                             <h3 class="subtitle bold">TORAZO / ASTURIAS</h3>
                         </li>
+                        <span style="height: 20svh;"></span>
                     </ul>
                     <ul id="second_ul" class="ul_container">
                         <li>
@@ -91,7 +92,6 @@
                                 <h3 class="info-text bold">12:00</h3>
                                 <h3 class="info-text">Bus desde Villaviciosa</h3>
                             </div>
-                            <!-- <span class="init_separator_vertical"></span> -->
                         </li>
                         <li class="container_separator_vertical">
                             <span class="separator_vertical"></span>
