prueba display flex iphone6

--- a/index.html
+++ b/index.html
@@ -85,97 +85,117 @@
                         <span style="height: 20svh;"></span>
                     </ul>
                     <ul id="second_ul" class="ul_container">
-                        <li>
+                        <li class="li_container">
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/directions_bus.png"
                                     alt="Icono de un autobús">
                                 <h3 class="info-text bold">12:00</h3>
                                 <h3 class="info-text">Bus desde Villaviciosa</h3>
                             </div>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                         </li>
-                        <li class="container_separator_vertical">
-                            <span class="separator_vertical"></span>
-                        </li>
-                        <li>
+                        <li class="li_container">
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/photo_camera.png"
                                     alt="Icono de una cámara de fotos">
                                 <h3 class="info-text bold">13:00</h3>
                                 <h3 class="info-text">Ceremonia</h3>
                             </div>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                         </li>
-                        <li class="container_separator_vertical">
-                            <span class="separator_vertical"></span>
-                        </li>
-                        <li>
+                        <li class="li_container">
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/tapas.png"
                                     alt="Icono de un cuchillo y tenedor">
                                 <h3 class="info-text bold">13:30</h3>
                                 <h3 class="info-text">Cóctel</h3>
                             </div>
-                        </li>
-                        <li class="container_separator_vertical">
-                            <span class="separator_vertical"></span>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                         </li>
                     </ul>
                     <ul id="third_ul" class="ul_container">
                         <li>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/restaurant.png"
                                     alt="Icono de un restaurante">
                                 <h3 class="info-text bold">15:00</h3>
                                 <h3 class="info-text">Banquete</h3>
                             </div>
-                        </li>
-                        <li class="container_separator_vertical">
-                            <span class="separator_vertical"></span>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                         </li>
                         <li>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/celebration.png"
                                     alt="Icono de una celebración">
                                 <h3 class="info-text bold">17:00</h3>
                                 <h3 class="info-text">Baile</h3>
                             </div>
-                        </li>
-                        <li class="container_separator_vertical">
-                            <span class="separator_vertical"></span>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                         </li>
                         <li>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/directions_bus.png"
                                     alt="Icono de un autobús">
                                 <h3 class="info-text bold">23:59</h3>
                                 <h3 class="info-text">Bus desde Torazo</h3>
                             </div>
-                        </li>
-                        <li class="container_separator_vertical last">
-                            <span class="separator_vertical last"></span>
+                            <div class="container_separator_vertical">
+                                <span class="separator_vertical"></span>
+                            </div>
                         </li>
                     </ul>
                     <ul id="fourth_ul" class="ul_container">
-                        <li>
-                            <div class="info-content" style="height: 56px">
-                                <img class="info-icons" src="/assets/icons/no_photography.png"
-                                    alt="Icono de un autobús">
-                                <h3 class="info-text bold">01:00</h3>
-                                <span class="separator_vertical after-dot"></span>
-                            </div>
-                        </li>
-                        <li>
-                            <h3 id="after-text">Y para quienes la noche aún sea jóven, la <br> celebración continúa
-                                en la Finca Sorribas, un <br> lugar mágico en Villaviciosa. A un kilómetro
-                                <br> caminando desde la parada del bus. La fiesta <br>
-                                corre de nuestra cuenta y, para todo lo <br>demás, nuestra cuenta es:
-                            </h3>
-                        </li>
-                        <li>
-                            <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
-                        </li>
-                        <li>
-                            <h3>¡Os esperamos a todos!</h3>
-                        </li>
+                        <div style="margin-top: 16px;">
+                            <li>
+                                <div class="container_separator_vertical">
+                                    <span class="separator_vertical"></span>
+                                </div>
+                                <div class="info-content" style="height: 56px">
+                                    <img class="info-icons" src="/assets/icons/no_photography.png"
+                                        alt="Icono de un autobús">
+                                    <h3 class="info-text bold">01:00</h3>
+                                </div>
+                            </li>
+                            <li>
+                                <h3 id="after-text">Y para quienes la noche aún sea jóven, la <br> celebración continúa
+                                    en la Finca Sorribas, un <br> lugar mágico en Villaviciosa. A un kilómetro
+                                    <br> caminando desde la parada del bus. La fiesta <br>
+                                    corre de nuestra cuenta y, para todo lo <br>demás, nuestra cuenta es:
+                                </h3>
+                            </li>
+                            <li>
+                                <h3 id="iban" class="bold">ES91 0073 0100 5106 1230 8849</h3>
+                            </li>
+                            <li>
+                                <h3>¡Os esperamos a todos!</h3>
+                            </li>
+
+                        </div>
                     </ul>
                 </div>
             </div>
