prueba display flex Mi10T Pro

--- a/index.html
+++ b/index.html
@@ -86,95 +86,72 @@
                     </ul>
                     <ul id="second_ul" class="ul_container">
                         <li class="li_container">
+                            <span class="separator_vertical transparent"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/directions_bus.png"
                                     alt="Icono de un autobús">
                                 <h3 class="info-text bold">12:00</h3>
                                 <h3 class="info-text">Bus desde Villaviciosa</h3>
                             </div>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                            <span class="separator_vertical"></span>
                         </li>
                         <li class="li_container">
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                            <span class="separator_vertical"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/photo_camera.png"
                                     alt="Icono de una cámara de fotos">
                                 <h3 class="info-text bold">13:00</h3>
                                 <h3 class="info-text">Ceremonia</h3>
                             </div>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                            <span class="separator_vertical"></span>
                         </li>
                         <li class="li_container">
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                            <span class="separator_vertical"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/tapas.png"
                                     alt="Icono de un cuchillo y tenedor">
                                 <h3 class="info-text bold">13:30</h3>
                                 <h3 class="info-text">Cóctel</h3>
                             </div>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                            <span class="separator_vertical"></span>
                         </li>
                     </ul>
                     <ul id="third_ul" class="ul_container">
-                        <li>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                        <li class="li_container">
+                            <span class="separator_vertical"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/restaurant.png"
                                     alt="Icono de un restaurante">
                                 <h3 class="info-text bold">15:00</h3>
                                 <h3 class="info-text">Banquete</h3>
                             </div>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                            <span class="separator_vertical"></span>
                         </li>
-                        <li>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                        <li class="li_container">
+                            <span class="separator_vertical"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/celebration.png"
                                     alt="Icono de una celebración">
                                 <h3 class="info-text bold">17:00</h3>
                                 <h3 class="info-text">Baile</h3>
                             </div>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                            <span class="separator_vertical"></span>
                         </li>
-                        <li>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                        <li class="li_container">
+                            <span class="separator_vertical"></span>
                             <div class="info-content">
                                 <img class="info-icons" src="/assets/icons/directions_bus.png"
                                     alt="Icono de un autobús">
                                 <h3 class="info-text bold">23:59</h3>
                                 <h3 class="info-text">Bus desde Torazo</h3>
                             </div>
-                            <div class="container_separator_vertical">
-                                <span class="separator_vertical"></span>
-                            </div>
+                            <span class="separator_vertical"></span>
                         </li>
                     </ul>
                     <ul id="fourth_ul" class="ul_container">
-                        <div style="margin-top: 16px;">
-                            <li>
-                                <div class="container_separator_vertical">
-                                    <span class="separator_vertical"></span>
-                                </div>
+                        <div>
+                            <li class="li_container">
+                                <span class="separator_vertical"></span>
                                 <div class="info-content" style="height: 56px">
                                     <img class="info-icons" src="/assets/icons/no_photography.png"
                                         alt="Icono de un autobús">
